# clothes_segmentation

./: README.md  pyproject.toml
notebooks/: segformer_b2_clothes.ipynb
scripts/: batch_process_products.py  process_product_images_segformer.py
