[project]
name = "image-segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.0.0",
    "pip>=25.3",
    "torch>=2.9.1",
    "torchvision>=0.20.0",
    "numpy>=1.24.0",
    "transformers>=4.57.3",
    "pandas>=2.3.3",
    "loguru>=0.7.3",
    "timm>=1.0.22",
    "openpyxl>=3.1.5",
]
